--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,12 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
+    command: pack
+    packagesToPack: '**/*.csproj'
+    packDestination: '$(Build.ArtifactStagingDirectory)'
+    
+- task: NuGetCommand@2
+  inputs:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
     nuGetFeedType: 'internal'
