--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,4 +43,4 @@ steps:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
     nuGetFeedType: 'internal'
-    publishVstsFeed: 'f4ed8972-80c1-454c-8c59-89a983e537cc'
+    publishVstsFeed: 'a94be647-4202-4ed7-a15c-52cbe6f30c48/4d90a3fb-de44-4cc3-9429-953c7f24006e'
